completed user login api - hash password using bcrypt - jsonwebtoken

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,6 @@
 {
     "name": "EnergeticSuccess",
     "dbHost": "mongodb://root:root@ds243768.mlab.com:43768/revsharemedia",
+    "secret": "RevShareMedia_Credential",
     "expiresIn": "24h"
 }
