--- a/config/config.json
+++ b/config/config.json
@@ -2,5 +2,6 @@
     "name": "EnergeticSuccess",
     "dbHost": "mongodb://adb01dc21f4d:Cr177us3r@localhost:27017/crm",
     "secret": "RevShareMedia_Credential",
+    "secretToken": "RevSharemMedia_SecretToken",
     "expiresIn": "24h"
 }
