--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.6",
     "morgan": "~1.9.0",
+    "public-ip": "^2.4.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
